# MqttApplicationSamples

./: CMakeLists.txt  CMakePresets.json  Setup.md
mqttclients/c/mosquitto_client_extensions/: mqtt_callbacks.h  mqtt_setup.h
scenarios/raspberry_pi/: README.md  sebsor.md
scenarios/raspberry_pi/bmp280/: main.cpp
scenarios/raspberry_pi/c/: CMakeLists.txt
scenarios/raspberry_pi/c/raspberry_pi_client/: main.c  main.cpp  main2.cpp
scenarios/raspberry_pi/c/sensors/: bme280.c  bme280.h  bme280_2  bme280_2.cpp
scenarios/raspberry_pi/c/server_client/: main.c
